Fix vertical overflow on files view

--- a/app/stylesheets/builtin-pages/components/files-columns-view.less
+++ b/app/stylesheets/builtin-pages/components/files-columns-view.less
@@ -9,7 +9,7 @@
   background: #fff;
   height: 100vh;
   overflow-x: auto;
-  margin-bottom: 25px; // height of breadcrumbs
+  padding-bottom: 25px; // height of breadcrumbs
 
   .icon {
     width: 12px;
